# logging-http-client

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  readthedocs.yaml
.github/: pull_request_template.md
.github/workflows/: CICD.yml  MANUAL-DEPLOYMENT.yml  cd-workflow.yml  ci-workflow.yml
.hooks/: pre-commit
.ide/: settings.json
docs/: .readthedocs.yaml  custom_logging_hooks.md  default_logging_configurations.md  index.md  installation.md  log_record_structure.md  mkdocs.yml  obscuring_sensitive_data.md  replacement_for_requests.md  reusable_sessions.md
docs/config/: .readthedocs.yaml  mkdocs.yml
logging_http_client/: __init__.py  http_headers.py  http_log_record.py  http_methods.py  http_session.py  log_level.py  logging_client.py  logging_default_config.py  logging_default_hooks.py  logging_hooks.py  logging_http_client_class.py  logging_http_client_config.py  logging_http_client_config_globals.py
tests/: conftest.py
tests/integration/: conftest.py  test_client_on_local_server.py  test_http_client_functional_requirements.py  test_smoke_on_all_http_methods.py
tests/unit/: test_base_log_record.py  test_http_headers.py  test_http_log_record.py  test_http_methods.py  test_logging_default_config.py  test_logging_default_hooks.py  test_logging_enablement.py  test_logging_hooks.py  test_logging_obscurers.py  test_logging_traceability.py
