[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "logging-http-client"
version = "2.32.3.2"
description = "A logging library built on top of the requests library to provide a familiar interface for sending HTTP requests."
authors = ["u-ways <work@u-ways.info>"]
packages = [{ include = "logging_http_client", from = "." }]
readme = "README.md"
license = "MIT"
package-mode = true
homepage = "https://github.com/u-ways/logging-http-client"
documentation = "https://github.com/u-ways/logging-http-client/blob/main/README.md"
repository = "https://github.com/u-ways/logging-http-client"
keywords = ["logging", "http", "client", "requests"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
flake8 = "^7.1.0"
flake8-pyproject = "^1.2.3"
pyclean = "^3.0.0"
rich = "^13.7.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
pytest-env = "^1.1.3"
testcontainers = "^4.7.1"
wiremock= "^2.6.1"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
count = true

[tool.pytest.ini_options]
pythonpath = "logging_http_client tests"
testpaths = "tests"
env = [
    "LOG_LEVEL=DEBUG",
]
